fix: disable overflow in mobile view by setting min-height css property instead of height 100%

--- a/CIS1202/JS With DOM Activity/style.css
+++ b/CIS1202/JS With DOM Activity/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Lato:wght@700;900&display=swap');
 
 html, body {
-    height: 100%;
+    min-height: 100%;
 }
 
 body {
